--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title:       Ahn Jaehong 
+title:       Jaehong Ahn 
 email:       monsieur.ahn@gmail.com
 description: ''
 baseurl:     '' # The subpath of your site, e.g. /blog
