--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@
 title:       Jaehong Ahn 
 email:       monsieur.ahn@gmail.com
 description: ''
-baseurl:     '' # The subpath of your site, e.g. /blog
-url:         'https://h0n9.postie.chat/' # The base hostname & protocol for your site
+baseurl:      # The subpath of your site, e.g. /blog
+url:         'https://h0n9.postie.chat' # The base hostname & protocol for your site
 # twitter:     ''
 github:      'https://github.com/h0n9/'
 instagram:   'https://www.instagram.com/monsieur.ahn/' 
@@ -24,8 +24,8 @@ sass:
   style: compressed
 
 plugins:
-#  - jekyll-paginate
-#  - jekyll/tagging
+  - jekyll-paginate
+  - jekyll/tagging
 
 include:
   - _pages
@@ -34,13 +34,12 @@ exclude:
   - vendor
   - Gemfile
   - Gemfile.lock
-  - vim-markdown-preview.html
   - tags
 
 # Tags
-#tag_page_dir:         tag
-#tag_page_layout:      tag_page
-#tag_permalink_style:  pretty
+tag_page_dir:         tag
+tag_page_layout:      tag_page
+tag_permalink_style:  pretty
 
 # Pages path
 defaults:
